# 2d-grasp

./: README.md  pyproject.toml
runs/dexgrasp_ppo/: vecnormalize.pkl
runs/dexgrasp_ppo/PPO_1/: events.out.tfevents.1772348930.KINO-LAPTOP-R3U318JG.18132.0
runs/dexgrasp_ppo/PPO_10/: events.out.tfevents.1772360928.KINO-LAPTOP-R3U318JG.27876.0
runs/dexgrasp_ppo/PPO_11/: events.out.tfevents.1772361046.KINO-LAPTOP-R3U318JG.8084.0
runs/dexgrasp_ppo/PPO_12/: events.out.tfevents.1772361093.KINO-LAPTOP-R3U318JG.26656.0
runs/dexgrasp_ppo/PPO_13/: events.out.tfevents.1772361268.KINO-LAPTOP-R3U318JG.27124.0
runs/dexgrasp_ppo/PPO_14/: events.out.tfevents.1772361285.KINO-LAPTOP-R3U318JG.19256.0
runs/dexgrasp_ppo/PPO_15/: events.out.tfevents.1772361737.KINO-LAPTOP-R3U318JG.10732.0
runs/dexgrasp_ppo/PPO_16/: events.out.tfevents.1772361947.KINO-LAPTOP-R3U318JG.23692.0
runs/dexgrasp_ppo/PPO_17/: events.out.tfevents.1772361975.KINO-LAPTOP-R3U318JG.11148.0
runs/dexgrasp_ppo/PPO_2/: events.out.tfevents.1772349020.KINO-LAPTOP-R3U318JG.9832.0
runs/dexgrasp_ppo/PPO_3/: events.out.tfevents.1772349086.KINO-LAPTOP-R3U318JG.25612.0
runs/dexgrasp_ppo/PPO_4/: events.out.tfevents.1772349108.KINO-LAPTOP-R3U318JG.29240.0
runs/dexgrasp_ppo/PPO_5/: events.out.tfevents.1772349128.KINO-LAPTOP-R3U318JG.7752.0
runs/dexgrasp_ppo/PPO_6/: events.out.tfevents.1772349238.KINO-LAPTOP-R3U318JG.10496.0
src/2d_grasp/: __init__.py  eval.py  render_model.py  train_sb3_ppo.py
src/2d_grasp/envs/: __init__.py  curriculum.py  dex_grasp_2d.py  reward.py  (+1 more)
tests/: test_curriculum.py  test_env.py
(+3 files in other folders)
