[project]
name = "2d-grasp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "kINo", email = "kinobhu@outlook.com" }
]
requires-python = ">=3.12"
dependencies = [
    "gymnasium[box2d]>=1.2.3",
    "numpy>=2.0.0",
    "stable-baselines3>=2.7.1",
]

[project.optional-dependencies]
train = [
    "stable-baselines3>=2.3.2",
    "torch>=2.3.0",
    "tensorboard>=2.16.0",
]
test = [
    "pytest>=8.2.0",
]

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"
